--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "CPPVisualization",
   "version": "1.0.0",
   "description": "Project to visualize dependencies inside a cpp project.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,7 +12,7 @@
     "url": "git+https://github.com/Scanix/CPPVisualization.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Alexandre Bianchi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Scanix/CPPVisualization/issues"
