--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project to visualize dependencies inside a cpp project.",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron .",
+    "start": "electron ./src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/Scanix/CPPVisualization/issues"
   },
-  "homepage": "https://github.com/Scanix/CPPVisualization#readme"
+  "homepage": "https://github.com/Scanix/CPPVisualization#readme",
+  "devDependencies": {
+    "electron": "^10.1.5"
+  }
 }
