--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "chokidar": "^3.4.3",
         "d3": "^6.2.0",
+        "d3-drag": "^2.0.0",
         "masonry-layout": "^4.2.2",
         "path-sort": "^0.1.0",
         "recursive-readdir": "^2.2.2"
